--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^4.5.0",
     "dateformat": "^5.0.3",
     "dateformate": "^1.1.0",
+    "firebase": "^9.15.0",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
