--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
